
[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://StaticBody.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=4]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/kirifont/Kirifont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Camera.gd" type="Script" id=5]
[ext_resource path="res://Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sfx/Gravity Gauntlet - Main Theme.mp3" type="AudioStream" id=7]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 2, 0.5, 6 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.25, 3 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 10, 0.05, 10 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.843137, 0.0588235, 0.0588235, 1 )

[node name="Main" type="Spatial"]
transform = Transform( 1.19536, 0, 0, 0, 1.19536, 0, 0, 0, 1.19536, 0, 0, 0 )
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "To protect a branch:

On the top bar, select Main menu > Projects and find your project.
On the left sidebar, select Settings > Repository.
Expand Protected branches.
From the Branch dropdown list, select the branch you want to protect.
From the Allowed to merge list, select a role, or group that can merge into this branch. In GitLab Premium, you can also add users.
From the Allowed to push list, select a role, group, or user that can push to this branch. In GitLab Premium, you can also add users.
Select Protect."
}

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.267652, 0 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 25, 0, 0, 0, 0.507, 0, 0, 0, 25, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 25, 0, 0, 0, 0.0263989, 0, 0, 0, 25, 0, 0.159868, 0 )
generate_lightmap = false

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.836568, 0, 0, 0, 0.836568, 0, 0, 0, 0.836568, 0, 1.60688, 0.172068 )
visible = false

[node name="Player" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 2.09559, -2.16345, 0 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -2.12874, 0, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.836568, 0, 0, 0, 0.758188, 0.353549, 0, -0.353549, 0.758188, 0, 3, 8 )
current = true
script = ExtResource( 5 )

[node name="Walls" type="Spatial" parent="."]

[node name="start_platform" type="StaticBody" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.25, 0 )
collision_layer = 4
collision_mask = 4

[node name="MeshInstance" type="MeshInstance" parent="Walls/start_platform"]
transform = Transform( 1.00142, 0, 0, 0, 1.00142, 0, 0, 0, 1.00142, -2, 0, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance5" type="MeshInstance" parent="Walls/start_platform"]
transform = Transform( 1.00142, 0, 0, 0, 1.00142, 0, 0, 0, 1.00142, -0.00151664, 0, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Walls/start_platform"]
transform = Transform( 1.00142, 0, 0, 0, 1.00142, 0, 0, 0, 1.00142, 2, 0, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="Walls/start_platform"]
transform = Transform( -4.37735e-08, 0, 1.00142, 0, 1.00142, 0, -1.00142, 0, -4.37735e-08, 0, 0, 2 )
mesh = SubResource( 2 )

[node name="MeshInstance4" type="MeshInstance" parent="Walls/start_platform"]
transform = Transform( -4.37735e-08, 0, 1.00142, 0, 1.00142, 0, -1.00142, 0, -4.37735e-08, 0, 0, -2 )
mesh = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/start_platform"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )
shape = SubResource( 1 )

[node name="CollisionShape5" type="CollisionShape" parent="Walls/start_platform"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0120478, 0, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="Walls/start_platform"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
shape = SubResource( 1 )

[node name="CollisionShape3" type="CollisionShape" parent="Walls/start_platform"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 2 )
shape = SubResource( 1 )

[node name="CollisionShape4" type="CollisionShape" parent="Walls/start_platform"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -2 )
shape = SubResource( 1 )

[node name="Platform2" type="StaticBody" parent="Walls"]
transform = Transform( -4.37115e-08, -1, 0, 1, -4.37115e-08, 0, 0, 0, 1, -3.25, 0, 0 )
collision_layer = 4
collision_mask = 4

[node name="MeshInstance" type="MeshInstance" parent="Walls/Platform2"]
transform = Transform( 1.00142, 0, 0, 0, 1.00142, 0, 0, 0, 1.00142, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Platform2"]
shape = SubResource( 1 )

[node name="Platform5" type="StaticBody" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.25, 0 )
collision_layer = 4
collision_mask = 4

[node name="MeshInstance" type="MeshInstance" parent="Walls/Platform5"]
transform = Transform( 1.00142, 0, 0, 0, 1.00142, 0, 0, 0, 1.00142, -2, 0, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Walls/Platform5"]
transform = Transform( 1.00142, 0, 0, 0, 1.00142, 0, 0, 0, 1.00142, 2, 0, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="Walls/Platform5"]
transform = Transform( -4.37735e-08, 0, 1.00142, 0, 1.00142, 0, -1.00142, 0, -4.37735e-08, 0, 0, 2 )
mesh = SubResource( 2 )

[node name="MeshInstance4" type="MeshInstance" parent="Walls/Platform5"]
transform = Transform( -4.37735e-08, 0, 1.00142, 0, 1.00142, 0, -1.00142, 0, -4.37735e-08, 0, 0, -2 )
mesh = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Platform5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="Walls/Platform5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
shape = SubResource( 1 )

[node name="CollisionShape3" type="CollisionShape" parent="Walls/Platform5"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 2 )
shape = SubResource( 1 )

[node name="CollisionShape4" type="CollisionShape" parent="Walls/Platform5"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -2 )
shape = SubResource( 1 )

[node name="Platform3" type="StaticBody" parent="Walls"]
transform = Transform( -4.37115e-08, -1, 0, 1, -4.37115e-08, 0, 0, 0, 1, 3.25, 0, 0 )
collision_layer = 4
collision_mask = 4

[node name="MeshInstance" type="MeshInstance" parent="Walls/Platform3"]
transform = Transform( 1.00142, 0, 0, 0, 1.00142, 0, 0, 0, 1.00142, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Platform3"]
shape = SubResource( 1 )

[node name="Back wall" type="StaticBody" parent="Walls"]
transform = Transform( 1.91069e-15, 4.37114e-08, -1, 1, -4.37115e-08, 0, -4.37115e-08, -1, -4.37114e-08, 0, 0, -3.25 )
collision_layer = 4
collision_mask = 4

[node name="MeshInstance" type="MeshInstance" parent="Walls/Back wall"]
transform = Transform( 1.00142, 7.10543e-15, 4.23516e-22, -7.10543e-15, 1.00142, 3.55271e-15, 0, -3.55271e-15, 1.00142, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="StaticBody/MeshInstance"]
transform = Transform( 0.0324409, 0, 0, 0, 2.38278, 4.30325, 0, -0.0177544, 0.00983092, 0, 125.039, 0.465818 )
light_energy = 0.706
shadow_enabled = true

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( -0.0118043, 0.188941, -0.981919, 0.00210225, 0.98199, 0.188929, 0.999928, 0.000165947, -0.0119889, 0, 0.802274, 0.381101 )

[node name="Camera" type="Camera" parent="Pivot"]
transform = Transform( 0.836568, 0, 0, 0, 0.742112, 0.386155, 0, -0.386155, 0.742112, 0, 14.3932, 30.8993 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.738938, 4.43045, -11.5894 )

[node name="Player2" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.999996, 0, -0.00286236, 0, 1, 0, 0.00286236, 0, -0.999996, 0.275499, 4.69249, 12.1584 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Back wall"]
shape = SubResource( 1 )

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="HUD"]
autostart = true

[node name="Label" type="Label" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
custom_fonts/font = ExtResource( 4 )
text = "10"
align = 1

[node name="Deathzone" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Deathzone"]
shape = SubResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -4.333
autoplay = true

[connection signal="player_pos" from="." to="Camera" method="_on_Main_player_pos"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_RotationTimer_timeout"]
[connection signal="timeout" from="HUD/Timer" to="HUD" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Deathzone" to="." method="_on_Deathzone_body_entered"]
